Change user_id to firebase_uid
