# flowo-backend/docs/swagger.yaml
@@ -7,12 +7,12 @@ definitions:
       quantity:
         minimum: 1
         type: integer
-      user_id:
+      firebase_uid:
         type: integer
     required:
     - product_id
     - quantity
-    - user_id
+    - firebase_uid
     type: object
   dto.CartItemResponse:
     properties:
@@ -78,12 +78,12 @@ definitions:
         maximum: 5
         minimum: 1
         type: integer
-      user_id:
+      firebase_uid:
         description: ProductID int    `json:"product_id" binding:"required"`
         type: integer
     required:
     - rating
-    - user_id
+    - firebase_uid
     type: object
   dto.ProductCreate:
     description: Product creation request body
@@ -128,11 +128,11 @@ definitions:
     properties:
       product_id:
         type: integer
-      user_id:
+      firebase_uid:
         type: integer
     required:
     - product_id
-    - user_id
+    - firebase_uid
     type: object
   dto.ReviewResponse:
     properties:
@@ -146,7 +146,7 @@ definitions:
         type: string
       review_id:
         type: integer
-      user_id:
+      firebase_uid:
         type: integer
     type: object
   dto.TodoCreate:
@@ -178,12 +178,12 @@ definitions:
       quantity:
         minimum: 1
         type: integer
-      user_id:
+      firebase_uid:
         type: integer
     required:
     - product_id
     - quantity
-    - user_id
+    - firebase_uid
     type: object
   model.FlowerType:
     properties:
